2003-05-26  Hynek Hanke  <hanke@localhost.localdomain>

	* src/server/server.c (process_message_spell): Fixed bug with strlen in for-cycle condition.
	Take into account the changes in snd_icon_spelling_get()
	(process_message_punctuation): Fixed bug with strlen in for-cycle condition.
	

	* src/server/sndicon.c (snd_icon_spelling_get): Optimized for speed.

2003-05-26  Hynek Hanke  <hanke@volny.cz>

	* Speech Deamon renamed to Speech Dispatcher.

2003-05-26  Hynek Hanke  <hanke@volny.cz>

	* src/server/parse.c (parse_set): Handle new SSIP command: SET {SELF|ALL|id} OUTPUT_MODULE module

	* src/server/set.h: Declarations of new functions set_output_module_*

	* src/server/set.c (set_output_module_uid): New function: set other default output module for this client.
	(set_output_module_all): New function.
	(set_output_module_self): New function.

	* src/server/msg.h (ERR_COULDNT_SET_OUTPUT_MODULE): New SSIP message.
	(OK_OUTPUT_MODULE_SET): New SSIP message.
	

2003-05-25  Hynek Hanke  <hanke@localhost.localdomain>

	* src/server/sndicon.c (queue_message): New parameter passed.
	Handle `space' as CHAR parameter.

	* src/server/msg.h (OK_VOICE_LIST_SENT): New SSIP message.

	* src/server/history.c (queue_message): New parameter passed.

	* src/server/server.c (queue_message): New parameter: is it a whole message or only a piece?
	(queue_messages):  New parameter: is it a whole message or only a piece?

	* intl/fdset.h (TFDSetElement): New flag for messages after spelling and punctuation.

	* src/server/speaking.c (speak): Handle priority 3 messages sent in more pieces (after processing).

	* src/server/parse.c (get_param): Parameters aren't enclosed in doublequotes.
	(parse_char): Handle "space" parameter.
	(parse_list): LIST VOICES implemented.


2003-05-22  Milan Zamazal  <pdm@brailcom.org>

	* src/modules/festival.c: All internal objects declared static.
	(module_getparam_int): Use `strtol' instead of `atoi' and be safe
	on conversion failure.